# VIMAX_LITE

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
docs/: architecture.md  learning_path.md  manual_image_workflow.md  remotion_video_assembly_plan.md  vimax_lite_vs_vimax.md
docs/consistency_issue_examples/: character_char_robot_front.json  character_char_robot_side.json
remotion/: package.json  tsconfig.json
remotion/src/: Root.tsx  ShotScene.tsx  VimaxTimelineVideo.tsx
src/vimax_lite/: __init__.py  agents.py  cli.py  manual_workflow.py  models.py  pipeline.py  providers.py  rag.py  renderers.py  schemas.py  sdxl_generator.py  timeline.py  web_app.py
src/vimax_lite/templates/: base.html  home.html  job.html  music.html  project.html  references.html  shots.html
tests/: test_pipeline.py
