[project]
name = "vimax-lite"
version = "0.1.0"
description = "Gemini-powered portfolio tool for AI video production design, RAG, and agent learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
sdxl = [
    "torch",
    "diffusers[torch]",
    "transformers",
    "accelerate",
    "safetensors",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
vimax-lite = "vimax_lite.cli:main"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
